--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="https://i.ibb.co/QKJhRtt/world.png" />
+    <link rel="icon" type="image/svg+xml" href="https://i.ibb.co/DMZvhP6/news.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>News 12 Paper</title>
   </head>
